--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.3",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-redux": "^8.0.5",
     "react-scripts": "^5.0.1",
+    "redux": "^4.2.1",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
@@ -43,6 +46,7 @@
     "@babel/core": "^7.20.12",
     "@babel/eslint-parser": "^7.19.1",
     "@babel/plugin-syntax-jsx": "^7.18.6",
+    "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
