--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,7 @@
       }
     ],
     "react/react-in-jsx-scope": "off",
+    "no-nested-ternary": "off",
     "import/no-unresolved": "off",
     "no-shadow": "off"
   },
