--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^6.8.1",
     "react-scripts": "^5.0.1",
     "redux": "^4.2.1",
+    "redux-logger": "^3.0.6",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
